# Prima

./: .gitignore  README.md  input.txt  package-lock.json  package.json  run.bat  run.sh  tasks.py  tsconfig.json  webpack.config.js
backend/: .gitignore  CMakeLists.txt  README.md
backend/src/: main.cpp
backend/src/Common/: Chunk.h  ChunkCreator.cpp  ChunkCreator.h  Object.h  ObjectType.h  OpCode.h  StringObject.h  Value.cpp  Value.h  ValueType.h
backend/src/Parser/: AbstractByteCodeProcessor.h  ByteCodeParser.cpp  ByteCodeParser.h  ChunkCreator.cpp  ChunkCreator.h  Constants.h  Preprocessor.h
backend/src/Prelude/: Prelude.h  StackFrame.h
backend/src/Scanner/: Scanner.h  Token.h  TokenType.h
backend/src/Value/: GlobalVariables.h  StringPool.h
backend/test/: ChunkTest.cpp
frontend/: .gitignore  bytecode.prmbc  grammar.txt  input.txt  jest.config.js  output.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: Prima.ts  generateTable.ts  main.ts  master.ts
frontend/src/AST/: ExampleAST.ts
frontend/src/AST/Nodes/: ASTNode.ts  ArgumentNode.ts  BinaryExpression.ts  BlockStatement.ts  CallExpression.ts  Declaration.ts  Expression.ts  ExpressionStatement.ts  FunctionExpression.ts  Identifier.ts  IfStatement.ts  Literal.ts  Marker.ts  MemberExpression.ts  Parameter.ts  Program.ts  ReturnStatement.ts  Statement.ts  TypeNode.ts  UnaryExpression.ts  VariableDeclaration.ts
frontend/src/AST/Types/: NodeType.ts  Type.ts
frontend/src/CodeGeneration/: CodeGenerator.ts
frontend/src/Common/: Keywords.ts  Table.ts  Token.ts  TokenType.ts  TypeToTerminal.ts
frontend/src/Constants/: Keywords.ts  Token.ts  TokenType.ts
frontend/src/Lexer/: Lexer.ts  TokenType.ts
frontend/src/Scanner/: Scanner.ts  Token.ts  TokenType.ts  main.ts
frontend/src/SyntacticRecognizer/: ActionHandlers.ts  CSVParser.ts  ParserTypes.ts  SyntacticRecognizer.ts  TokensConnector.ts  tokenToAstNode.ts
frontend/src/TableGenerator/: TableGenerator.ts
frontend/src/TableOptimizer/: Dictionary.ts  Symbol.ts  TableOptimizer.ts
frontend/test/: Sample.test.ts  SyntacticRecognizer.test.ts
praxis/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.electron.json  vite.config.ts
praxis/electron/: main.js  preload.cjs  preload.js
praxis/src/: App.tsx  index.css  main.tsx
praxis/src/app/: store.ts
praxis/src/components/: CodeEditor.tsx  Controls.tsx  EditorControls.tsx
praxis/src/types/: electronAPI.d.ts  global.d.ts
samples/: PrimeNumbers.prm  PrimeNumbers.ts  PrimeNumbersUnformated.prm  PrimeNumbersWithoutFunctions.prm  bytecode.prmbc
samples/bytecode/: after_preprocessing.prmbc  bytecode.prmbc  label.prmbc
src/: main.ts
src/Lexer/: Lexer.ts  Token.ts  TokenUtils.ts
src/SyntacticRecognizer/: CSVParser.ts  SyntacticRecognizer.ts  TokensConnector.ts
src/TableOptimizer/: TableOptimizer.ts
(+29 files in other folders)
